gap fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -153,7 +153,7 @@
 }
 
 .pictures {
-  gap: 10px;
+  gap: var(--decor-scale);
 }
 
 .footer {
